--- a/src/Sandbox.Console/Sandbox.Console.csproj
+++ b/src/Sandbox.Console/Sandbox.Console.csproj
@@ -3,11 +3,13 @@
   <ItemGroup>
     <ProjectReference Include="..\Sandbox.Collections.Generic\Sandbox.Collections.Generic.csproj" />
     <ProjectReference Include="..\Cs12DotNet8\Cs12DotNet8.csproj" />
+
+    <Using Include="System.Console" Static="true" />
   </ItemGroup>
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
